--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "type": "module",
   "dependencies": {
     "cron": "^3.1.6",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "websocket": "^1.0.34"
   }
 }
